fixed product-page on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@
     height:3em
 }
 .card-text {
-  height:10em
+  min-height:10em
 }
 .product-properties {
   list-style: none; 
